--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,7 @@
   register: mariadb_register_version
   changed_when: False
   failed_when: False
+  always_run: True
 
 - name: Check if local database port is open
   command: nc -z localhost {{ mariadb_port }}
@@ -17,6 +18,7 @@
   when: not mariadb_register_version.stdout
   failed_when: False
   changed_when: False
+  always_run: True
 
 - name: Override delegation if tunnel is detected
   set_fact:
